examples/test/testpolicy1532.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1532
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key7: value34
      key46: value7
      key2: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value29
          key3: value44
      podSelector:
        matchLabels:
          key47: value33
          key41: value16
          key45: value14
